# google-reviews-scraping

./: .gitignore  README.md  pyproject.toml
src/grscraper/: browser.py  cli.py  config.py  db.py  export.py  ingest.py  models.py  parser.py  resolver.py  reviews.py  runner.py  selectors.py  url.py
tests/: test_db.py  test_ingest.py  test_parser.py  test_url.py
tests/fixtures/: sample_cards.html
